# ofono-mirror

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  README  TODO  acinclude.m4  configure.ac  provision.json
data/: provision.json
doc/: coding-style.txt  features.txt  modem-api.txt  ofono-paper.txt  provision.rst  standards.txt
drivers/atmodem/: atmodem.c  atmodem.h  atutil.c  atutil.h  call-barring.c  call-forwarding.c  call-meter.c  call-settings.c  call-volume.c  cbs.c  devinfo.c  gnss.c  gprs-context.c  gprs.c  lte.c  network-registration.c  phonebook.c  sim.c  sms.c  stk.c  stk.h  ussd.c  vendor.h  voicecall.c
drivers/calypsomodem/: calypsomodem.c  calypsomodem.h  stk.c  voicecall.c
drivers/dunmodem/: dunmodem.c  dunmodem.h  gprs.c  network-registration.c
drivers/gemaltomodem/: gemaltomodem.c  gemaltomodem.h  gprs-context.c  location-reporting.c  models.h  netmon.c  radio-settings.c  voicecall.c
drivers/hfpmodem/: call-volume.c  devinfo.c  handsfree.c  hfpmodem.c  hfpmodem.h  network-registration.c  siri.c  slc.c  slc.h  voicecall.c
drivers/hsomodem/: gprs-context.c  hsomodem.c  hsomodem.h  radio-settings.c
drivers/huaweimodem/: audio-settings.c  gprs-context.c  huaweimodem.c  huaweimodem.h  radio-settings.c  ussd.c  voicecall.c
drivers/iceramodem/: gprs-context.c  radio-settings.c
drivers/ifxmodem/: audio-settings.c  ctm.c  gprs-context.c  ifxmodem.c  ifxmodem.h  radio-settings.c  stk.c  voicecall.c
drivers/isimodem/: audio-settings.c  call-barring.c  call-forwarding.c  call-meter.c  call-settings.c  call.h  cbs.c  debug.c  debug.h  devinfo.c  gpds.h  gprs-context.c  gprs.c  gss.h  info.h  infoserver.c  infoserver.h  isimodem.c  isimodem.h  isiutil.h  mtc.h  network-registration.c  network.h  phonebook.c  radio-settings.c  sim.c  sim.h  sms.c  sms.h  ss.h  uicc-util.c  uicc-util.h  uicc.c  uicc.h  ussd.c  voicecall.c
drivers/mbimmodem/: devinfo.c  gprs-context.c  gprs.c  mbim-desc.c  mbim-desc.h  mbim-message.c  mbim-message.h  mbim-private.h  mbim.c  mbim.h  mbimmodem.c  mbimmodem.h  network-registration.c  sim.c  sms.c  util.c  util.h
drivers/mbmmodem/: gprs-context.c  location-reporting.c  mbmmodem.c  mbmmodem.h  stk.c
drivers/nwmodem/: radio-settings.c
drivers/qmimodem/: call-barring.c  call-forwarding.c  call-settings.c  common.h  ctl.h  devinfo.c  dms.h  gprs-context.c  gprs.c  location-reporting.c  lte.c  nas.c  nas.h  netmon.c  network-registration.c  pds.h  qmi.c  qmi.h  qmimodem.c  qmimodem.h  radio-settings.c  sim-legacy.c  sim.c  sms.c  uim.h  ussd.c  util.h  voice.h  voicecall.c  wda.c  wda.h  wds.c  wds.h  wms.h
drivers/quectelmodem/: radio-settings.c
drivers/rilmodem/: call-barring.c  call-forwarding.c  call-settings.c  call-volume.c  cbs.c  devinfo.c  gprs-context.c  gprs.c  lte.c  netmon.c  network-registration.c  phonebook.c  radio-settings.c  rilmodem.c  rilmodem.h  rilutil.c  rilutil.h  sim.c  sms.c  stk.c  ussd.c  vendor.h  voicecall.c  voicecall.h
drivers/simcommodem/: radio-settings.c
drivers/speedupmodem/: ussd.c
drivers/stemodem/: caif_rtnl.c  caif_rtnl.h  gprs-context.c  radio-settings.c  stemodem.c  stemodem.h  voicecall.c
drivers/swmodem/: gprs-context.c  swmodem.c  swmodem.h
drivers/telitmodem/: gprs-context-ncm.c  location-reporting.c  telitmodem.c  telitmodem.h
drivers/ubloxmodem/: gprs-context.c  lte.c  netmon.c  network-registration.c  ubloxmodem.c  ubloxmodem.h
drivers/xmm7modem/: ims.c  netmon.c  radio-settings.c  xmm7modem.c  xmm7modem.h
drivers/ztemodem/: radio-settings.c
dundee/: bluez5.c  dbus.c  device.c  dundee.h  main.c  manager.c
examples/: emulator.c
gatchat/: gatchat.c  gatppp.c  gatserver.c  gatsyntax.c  ppp_lcp.c  test-server.c
gisi/: iter.c
include/: audio-settings.h  call-barring.h  call-forwarding.h  call-meter.h  call-settings.h  call-volume.h  cbs.h  ctm.h  dbus.h  devinfo.h  emulator.h  gnss.h  gprs-context.h  gprs-provision.h  gprs.h  handsfree-audio.h  handsfree.h  history.h  ims.h  location-reporting.h  log.h  lte.h  message-waiting.h  modem.h  netmon.h  netreg.h  nettime.h  phonebook.h  plugin.h  private-network.h  radio-settings.h  sim-auth.h  sim.h  siri.h  sms.h  stk.h  storage.h  types.h  ussd.h  version.h.in  (+1 more)
plugins/: alcatel.c  allowed-apns.c  bluez5.c  bluez5.h  calypso.c  cinterion.c  connman.c  droid.c  dun_gw_bluez5.c  emulator_fuzz.c  file-provision.c  g1.c  gemalto.c  gobi.c  hfp_ag_bluez5.c  hfp_hf_bluez5.c  hso.c  huawei.c  icera.c  ifx.c  infineon.c  isiusb.c  linktop.c  mbim.c  mbm.c  mbpi.c  n900.c  nokia-gpio.c  nokia-gpio.h  nokia.c  novatel.c  ofono.rules  palmpre.c  phonesim.c  push-notification.c  qrtrqmi.c  quectel.c  ril.c  ril.h  ril_intel.c  (+18 more)
src/: audio-settings.c  bluetooth.h  call-barring.c  call-forwarding.c  call-meter.c  call-settings.c  call-volume.c  cbs.c  common.c  common.h  ctm.c  dbus-clients.c  dbus.c  emulator.c  gnss.c  gnssagent.c  gnssagent.h  gprs.c  handsfree-audio.c  handsfree.c  hfp.h  history.c  ims.c  location-reporting.c  log.c  lte.c  main.c  manager.c  message-waiting.c  message.c  message.h  missing.h  modem.c  module.c  netmon.c  netmonagent.c  nettime.c  network.c  ofono.h  ofono.service.in  (+38 more)
tools/: auto-enable.c  get-location.c  huawei-audio.c  lookup-apn.c  provisiontool  stktest.c  tty-redirector.c  umlrunner
unit/: rilmodem-test-engine.c  rilmodem-test-engine.h  rilmodem-test-server.c  rilmodem-test-server.h  test-caif.c  test-cell-info-control.c  test-cell-info-dbus.c  test-cell-info.c  test-common.c  test-dbus-access.c  test-dbus-clients.c  test-dbus-queue.c  test-dbus.h  test-mbim.c  test-mux.c  test-provision.c  test-provision.json  test-qmimodem-qmi.c  test-rilmodem-cb.c  test-rilmodem-cs.c  test-rilmodem-gprs.c  test-rilmodem-sms.c  test-sailfish_access.c  test-simutil.c  test-sms-root.c  test-sms.c  test-stkutil.c  test-util.c
